--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,6 @@ version: '3'
 services:
   rest:
     build: .
-    image: greeting-microservice
+    image: monitoring-microservice
     ports:
      - "8080:80"
