--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,4 +4,14 @@ services:
     build: .
     image: monitoring-microservice
     ports:
-     - "8080:80"
+     - "80:80"
+    environment:
+     - MONGODB_URL=mongo:27017
+  mongo:
+    image: mongo:4
+    ports:
+     - "27017:27017"
+    volumes:
+     - mongo-data:/data/db
+volumes:
+  mongo-data:
