--- a/build.gradle
+++ b/build.gradle
@@ -64,7 +64,7 @@ dependencies {
     compile 'org.slf4j:slf4j-simple:1.7.5'
 
     // khttp
-    compile 'com.github.jkcclemens:khttp:-SNAPSHOT'
+    compile 'khttp:khttp:0.1.0'
 
     // Spark (REST Server)
     compile 'com.sparkjava:spark-kotlin:1.0.0-alpha'
