--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -3,7 +3,7 @@ services:
     command: ["/bin/sh", "-c", "[[ -z $CERTIFICATE_URL ]] && ( echo Injecting no certificate && dockerd-entrypoint.sh || exit ) || ( echo Injecting certificate $CERTIFICATE_URL && wget $CERTIFICATE_URL -O /usr/local/share/ca-certificates/cert.crt && update-ca-certificates && dockerd-entrypoint.sh || exit )"]
 
 variables:
-## uncomment this to inject a self-signed certificate into the docker:dind service
+## Uncomment this to inject a self-signed certificate into the docker:dind service
 #  CERTIFICATE_URL: http://my_server/my_corp.crt
 
 before_script:
@@ -14,7 +14,7 @@ before_script:
   - REGISTRY_USER=$CI_REGISTRY_USER
   - REGISTRY_PASSWORD=$CI_REGISTRY_PASSWORD
   - REGISTRY_IMAGE=$CI_REGISTRY_IMAGE
-  
+
 stages:
   - build
   - release
@@ -26,48 +26,48 @@ stages:
 #  script:
 #    - ...
 
-# traditional build with gradle and generate artifacts
+# Traditional build with gradle and generate artifacts
 build:
   stage: build
-  image: gradle:4.8-jdk8-alpine
+  image: openjdk:8-jdk-alpine
   script:
-    - gradle build
+    - ./gradlew build
   artifacts:
     paths:
       # use only shadowed jars
-      - "build/libs/*-all.jar"
+      - "build/libs/*.jar"
       - "build/distributions/*shadow*.tar"
 
       # reports (e.g. about failed tests)
       - "build/reports"
 
 ## Build & Push Docker Images ##
-# build docker image and push it to the registry as "debuglevel/greeting-microservice:branch-97dd42c"
+# Build docker image and push it to the registry as "debuglevel/greeting-microservice:branch-97dd42c"
 build-docker-master:
   stage: build
   image: docker:latest
   script:
     - echo "JOB_TIMESTAMP $JOB_TIMESTAMP | COMMIT_HASH_SHORT $COMMIT_HASH_SHORT | COMMIT_BRANCH_OR_TAG $COMMIT_BRANCH_OR_TAG | REGISTRY_HOST $REGISTRY_HOST | REGISTRY_USER $REGISTRY_USER | REGISTRY_IMAGE $REGISTRY_IMAGE | CERTIFICATE_URL $CERTIFICATE_URL"
-    - docker login -u "$REGISTRY_USER" -p "$REGISTRY_PASSWORD" $REGISTRY_HOST 
+    - docker login -u "$REGISTRY_USER" -p "$REGISTRY_PASSWORD" $REGISTRY_HOST
     - docker build --pull -t "$REGISTRY_IMAGE:$COMMIT_BRANCH_OR_TAG-$COMMIT_HASH_SHORT" .
     - docker push "$REGISTRY_IMAGE:$COMMIT_BRANCH_OR_TAG-$COMMIT_HASH_SHORT" && echo "== Pushed docker image $REGISTRY_IMAGE:$COMMIT_BRANCH_OR_TAG-$COMMIT_HASH_SHORT"
 
-# release branch docker image by pushing it to the registry as "debuglevel/greeting-microservice:branch"
+# Release branch docker image by pushing it to the registry as "debuglevel/greeting-microservice:branch"
 release-docker:
   stage: release
   image: docker:latest
   script:
-    - docker login -u "$REGISTRY_USER" -p "$REGISTRY_PASSWORD" $REGISTRY_HOST 
+    - docker login -u "$REGISTRY_USER" -p "$REGISTRY_PASSWORD" $REGISTRY_HOST
     - docker pull "$REGISTRY_IMAGE:$COMMIT_BRANCH_OR_TAG-$COMMIT_HASH_SHORT"
     - docker tag "$REGISTRY_IMAGE:$COMMIT_BRANCH_OR_TAG-$COMMIT_HASH_SHORT" "$REGISTRY_IMAGE:$COMMIT_BRANCH_OR_TAG"
     - docker push "$REGISTRY_IMAGE:$COMMIT_BRANCH_OR_TAG" && echo "== Pushed docker image $REGISTRY_IMAGE:$COMMIT_BRANCH_OR_TAG"
 
-# release master docker image by pushing it to the registry as "debuglevel/greeting-microservice"
+# Release master docker image by pushing it to the registry as "debuglevel/greeting-microservice" (which automatically also becomes "debuglevel/greeting-microservice:latest")
 release-docker-master:
   stage: release
   image: docker:latest
   script:
-    - docker login -u "$REGISTRY_USER" -p "$REGISTRY_PASSWORD" $REGISTRY_HOST 
+    - docker login -u "$REGISTRY_USER" -p "$REGISTRY_PASSWORD" $REGISTRY_HOST
     - docker pull "$REGISTRY_IMAGE:$COMMIT_BRANCH_OR_TAG-$COMMIT_HASH_SHORT"
     - docker tag "$REGISTRY_IMAGE:$COMMIT_BRANCH_OR_TAG-$COMMIT_HASH_SHORT" "$REGISTRY_IMAGE"
     - docker push "$REGISTRY_IMAGE" && echo "== Pushed docker image $REGISTRY_IMAGE"
