--- a/build.gradle
+++ b/build.gradle
@@ -1,32 +1,29 @@
 buildscript {
-    ext.kotlin_version = '1.2.71'
-
     repositories {
         jcenter()
     }
     dependencies {
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin"
     }
 }
 
 plugins {
-    id 'java'
-    id 'org.jetbrains.kotlin.jvm' version "1.2.71"
+    // Like --scan option to gradle; should be placed before any other plugins
+    id 'com.gradle.build-scan' version '2.1'
 
-    // create start scripts
-    // is executed on "build" task but not on e.g. "jar" task
+    id 'java'
+    id 'org.jetbrains.kotlin.jvm' version '1.3.21'
+
+    // Gradle dependency update checker; run by "dependencyUpdates" task
+    id "com.github.ben-manes.versions" version "0.20.0"
+
+    // Create start scripts
+    // Is executed on "build" task but not on e.g. "jar" task
     id 'application'
 
-    // bundle all dependencies into one fat shadowed jar
-    // (gets automatically triggered when application plugin is present)
-    id 'com.github.johnrengelman.shadow' version '2.0.4'
-}
-
-compileKotlin {
-    kotlinOptions.jvmTarget = "1.8"
-}
-compileTestKotlin {
-    kotlinOptions.jvmTarget = "1.8"
+    // Bundle all dependencies into one fat shadowed jar
+    // (Gets automatically triggered when application plugin is present)
+    id 'com.github.johnrengelman.shadow' version '4.0.4'
 }
 
 group 'de.debuglevel.monitoring'
@@ -35,8 +32,6 @@ version '0.0.1-SNAPSHOT'
 // application plugin configuration
 applicationName = "Monitoring Microservice"
 mainClassName = "de.debuglevel.monitoring.MainKt"
-
-sourceCompatibility = 1.8
 
 repositories {
     jcenter()
@@ -49,45 +44,69 @@ repositories {
 }
 
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
+    // Kotlin
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
 
     // Tests
-    testCompile 'org.junit.jupiter:junit-jupiter-api:5.2.0'
-    testRuntime 'org.junit.jupiter:junit-jupiter-engine:5.2.0'
-    testCompile 'org.junit.jupiter:junit-jupiter-params:5.2.0'
-    testCompile 'org.assertj:assertj-core:3.10.0'
+    testCompile 'org.junit.jupiter:junit-jupiter-api:5.4.0'
+    testRuntime 'org.junit.jupiter:junit-jupiter-engine:5.4.0'
+    testCompile 'org.junit.jupiter:junit-jupiter-params:5.4.0'
+    testCompile 'org.assertj:assertj-core:3.12.0'
 
     // Logging
-    // see http://saltnlight5.blogspot.com/2013/08/how-to-configure-slf4j-with-different.html for a quick introduction to slf4j
-    compile 'io.github.microutils:kotlin-logging:1.4.9'
-    compile 'org.slf4j:slf4j-api:1.7.5'
-    compile 'org.slf4j:slf4j-simple:1.7.5'
+    // See http://saltnlight5.blogspot.com/2013/08/how-to-configure-slf4j-with-different.html for a quick introduction to slf4j
+    implementation 'io.github.microutils:kotlin-logging:1.6.25'
+    implementation 'org.slf4j:slf4j-api:1.7.25'
+    implementation 'org.slf4j:slf4j-simple:1.7.25'
 
-    // khttp
-    compile 'khttp:khttp:0.1.0'
+    // Configuration
+    implementation "com.natpryce:konfig:1.6.10.0"
 
-    // Spark (REST Server)
-    compile 'com.sparkjava:spark-kotlin:1.0.0-alpha'
-    compile 'de.debuglevel.sparkmicroserviceutils:sparkmicroserviceutils:0.0.20'
+    // Spark (REST server)
+    implementation "com.sparkjava:spark-kotlin:1.0.0-alpha"
+    implementation 'de.debuglevel.sparkmicroserviceutils:sparkmicroserviceutils:0.0.22'
 
     // JSON
-    compile 'com.google.code.gson:gson:2.8.4'
+    implementation 'com.google.code.gson:gson:2.8.5'
 
     // Database
-    //compile 'org.mapdb:mapdb:3.0.7'
-    compile 'org.litote.kmongo:kmongo:3.8.3'
+    implementation 'org.litote.kmongo:kmongo:3.9.2'
 
     // Template Engine
-    compile 'com.sparkjava:spark-template-mustache:2.7.1'
+    implementation 'com.sparkjava:spark-template-mustache:2.7.1'
 }
 
-// jar configuration is still needed (despite of application plugin) to add Manifest to traditional jar
+// Java configuration
+java {
+    sourceCompatibility = JavaVersion.VERSION_1_8 // Source is Java 8 code
+    targetCompatibility = JavaVersion.VERSION_1_8 // Byte code will be JVM 8
+}
+
+// Kotlin configuration (implies compileKotlin and compileTestKotlin)
+tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_1_8 // Byte code will be JVM 8
+    }
+}
+
+// jar configuration
 jar {
+    // add Manifest to jar
     manifest {
         attributes 'Implementation-Title': applicationName,
                 'Implementation-Version': version,
                 'Main-Class': mainClassName
     }
+}
+
+// Configuration of com.gradle.build-scan plugin
+buildScan {
+    // Accept the license agreement for com.gradle.build-scan plugin
+    termsOfServiceUrl = 'https://gradle.com/terms-of-service'
+    termsOfServiceAgree = 'yes'
+
+    // Always publish scan (no more need for --scan option)
+    publishAlways()
 }
 
 test {
@@ -102,6 +121,6 @@ test {
     }
 }
 
-// for Heroku: create a "stage" task which simply executes "build"
+// For Heroku: create a "stage" task which simply executes "build"
 task stage(dependsOn: ['clean', 'build'])
 build.mustRunAfter clean
