--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,7 @@ plugins {
 }
 
 group 'de.debuglevel.monitoring'
-version '0.0.2-SNAPSHOT'
+version '0.0.2'
 
 // application plugin configuration
 applicationName = "Monitoring Microservice"
