Migrate to Micronaut

--- a/build.gradle
+++ b/build.gradle
@@ -4,18 +4,33 @@ buildscript {
     }
     dependencies {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin"
+
+        // TODO: might be removed when https://hibernate.atlassian.net/browse/HHH-13354 is resolved
+        classpath "org.hibernate:hibernate-gradle-plugin:$hibernateGradlePluginVersion"
     }
 }
 
 plugins {
     // Like --scan option to gradle; should be placed before any other plugins
-    id 'com.gradle.build-scan' version '2.1'
+    id 'com.gradle.build-scan'
 
     id 'java'
-    id 'org.jetbrains.kotlin.jvm' version '1.3.21'
+    id 'org.jetbrains.kotlin.jvm'
 
-    // Gradle dependency update checker; run by "dependencyUpdates" task
-    id "com.github.ben-manes.versions" version "0.20.0"
+    // Kotlin annotations processor (needed by Micronaut)
+    id 'org.jetbrains.kotlin.kapt'
+
+    //
+    // needed for Bean Validation https://docs.micronaut.io/latest/guide/index.html#beanValidation
+    // unsure, if there is another reason for it
+    // TODO: configure allopen to only open @Validated classes
+    id 'org.jetbrains.kotlin.plugin.allopen'
+
+    // Check updated dependencies with "gradle dependencyUpdates".
+    id 'com.github.ben-manes.versions'
+
+    // Release version with "gradle release"
+    id 'net.researchgate.release'
 
     // Create start scripts
     // Is executed on "build" task but not on e.g. "jar" task
@@ -23,15 +38,21 @@ plugins {
 
     // Bundle all dependencies into one fat shadowed jar
     // (Gets automatically triggered when application plugin is present)
-    id 'com.github.johnrengelman.shadow' version '4.0.4'
-}
+    id 'com.github.johnrengelman.shadow'
 
-group 'de.debuglevel.monitoring'
-version '0.0.3-SNAPSHOT'
+    // add no-argument constructors as they are needed for JPA (see https://kotlinlang.org/docs/reference/compiler-plugins.html#jpa-support)
+    id "org.jetbrains.kotlin.plugin.jpa"
+}
+// Enhance Hibernate entities (see configuration block below)
+// TODO: move to plugins block when https://hibernate.atlassian.net/browse/HHH-13354 is resolved
+apply plugin: 'org.hibernate.orm'
+
+group 'de.debuglevel.monitoring' // TODO
+version '0.0.3-SNAPSHOT' // TODO
 
 // application plugin configuration
 applicationName = "Monitoring Microservice"
-mainClassName = "de.debuglevel.monitoring.MainKt"
+mainClassName = "de.debuglevel.monitoring.Application"
 
 repositories {
     jcenter()
@@ -43,37 +64,82 @@ repositories {
     }
 }
 
+
+repositories {
+    jcenter()
+//    mavenLocal()
+//    maven {
+//        url "https://jitpack.io"
+//    }
+}
+
 dependencies {
+    // If no specific version is given, it is usually provided by the Micronaut BOM
+
     // Kotlin
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
+    //implementation "org.jetbrains.kotlin:kotlin-reflect"
 
     // Tests
-    testCompile 'org.junit.jupiter:junit-jupiter-api:5.4.0'
-    testRuntime 'org.junit.jupiter:junit-jupiter-engine:5.4.0'
-    testCompile 'org.junit.jupiter:junit-jupiter-params:5.4.0'
-    testCompile 'org.assertj:assertj-core:3.12.0'
+    /// JUnit
+    testImplementation "org.junit.jupiter:junit-jupiter-api"
+    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine"
+    testImplementation "org.junit.jupiter:junit-jupiter-params"
+    testImplementation "io.micronaut.test:micronaut-test-junit5"
+    /// Mockito
+    //testImplementation "org.mockito:mockito-junit-jupiter:$mockitoJunitJupiterVersion"
+    /// Assertions
+    testImplementation "org.assertj:assertj-core:$assertjVersion"
 
     // Logging
     // See http://saltnlight5.blogspot.com/2013/08/how-to-configure-slf4j-with-different.html for a quick introduction to slf4j
-    implementation 'io.github.microutils:kotlin-logging:1.6.25'
-    implementation 'org.slf4j:slf4j-api:1.7.25'
-    implementation 'org.slf4j:slf4j-simple:1.7.25'
+    implementation "io.github.microutils:kotlin-logging:$kotlinLoggingVersion"
+    runtimeOnly "ch.qos.logback:logback-classic:$logbackVersion"
 
-    // Configuration
-    implementation "com.natpryce:konfig:1.6.10.0"
-
-    // Spark (REST server)
-    implementation "com.sparkjava:spark-kotlin:1.0.0-alpha"
-    implementation 'de.debuglevel.sparkmicroserviceutils:sparkmicroserviceutils:0.0.22'
-
-    // JSON
-    implementation 'com.google.code.gson:gson:2.8.5'
+    // Micronaut
+    /// Bill of Materials, which defines dependency versions
+    implementation platform("io.micronaut:micronaut-bom:$micronautVersion")
+    kapt platform("io.micronaut:micronaut-bom:$micronautVersion")
+    kaptTest platform("io.micronaut:micronaut-bom:$micronautVersion")
+    // Core
+    implementation "io.micronaut:micronaut-runtime"
+    implementation "javax.annotation:javax.annotation-api"
+    runtimeOnly "com.fasterxml.jackson.module:jackson-module-kotlin:$jacksonModuleKotlinVersion"
+    /// Validation
+    kapt "io.micronaut:micronaut-validation"
+    //implementation 'io.micronaut.configuration:micronaut-hibernate-validator' // if full Bean Validator 2.0 compliance is needed
+    /// Server
+    implementation "io.micronaut:micronaut-http-server-netty"
+    /// Client
+    implementation "io.micronaut:micronaut-http-client"
+    /// Inversion of Control / Dependency Injection
+    kapt "io.micronaut:micronaut-inject-java"
+    kaptTest "io.micronaut:micronaut-inject-java"
+    testAnnotationProcessor "io.micronaut:micronaut-inject-java"
+    /// Management & Monitoring
+    /// automatically provides the /health endpoint publicly, and some other with authentication
+    implementation 'io.micronaut:micronaut-management'
+    //implementation 'io.micronaut.configuration:micronaut-jmx' // activate JMX for the endpoints
+    /// Persistence
+    kapt "io.micronaut.data:micronaut-data-processor:$micronautDataVersion"
+    implementation "io.micronaut.data:micronaut-data-hibernate-jpa:$micronautDataVersion"
+    runtimeOnly "io.micronaut.configuration:micronaut-jdbc-tomcat"
+    runtimeOnly "com.h2database:h2"
+    //testRuntimeOnly "org.hsqldb:hsqldb:$hsqldbVersion"
+    //testRuntimeOnly "org.apache.derby:derby:$derbyVersion"
+    /// Security
+    kapt "io.micronaut:micronaut-security"
+    implementation "io.micronaut:micronaut-security"
+    /// Views
+    implementation 'io.micronaut:micronaut-views'
+    runtimeOnly 'com.github.jknack:handlebars:4.1.0'
 
     // Database
     implementation 'org.litote.kmongo:kmongo:3.9.2'
 
-    // Template Engine
-    implementation 'com.sparkjava:spark-template-mustache:2.7.1'
+    // Swagger / OpenAPI
+    kapt "io.micronaut.configuration:micronaut-openapi"
+    implementation "io.swagger.core.v3:swagger-annotations"
 }
 
 // Java configuration
@@ -86,6 +152,8 @@ java {
 tasks.withType(org.jetbrains.kotlin.gradle.tasks.KotlinCompile).all {
     kotlinOptions {
         jvmTarget = JavaVersion.VERSION_1_8 // Byte code will be JVM 8
+        // retain parameter names for Java reflection
+        javaParameters = true
     }
 }
 
@@ -99,6 +167,12 @@ jar {
     }
 }
 
+// Appends entries in META-INF/services resources into a single resource. Not sure, if needed.
+// see: https://github.com/johnrengelman/shadow/blob/master/src/main/groovy/com/github/jengelman/gradle/plugins/shadow/transformers/ServiceFileTransformer.groovy
+shadowJar {
+    mergeServiceFiles()
+}
+
 // Configuration of com.gradle.build-scan plugin
 buildScan {
     // Accept the license agreement for com.gradle.build-scan plugin
@@ -107,6 +181,12 @@ buildScan {
 
     // Always publish scan (no more need for --scan option)
     publishAlways()
+}
+
+// Configuration of net.researchgate.release plugin
+release {
+    failOnCommitNeeded = false
+    failOnUnversionedFiles = false
 }
 
 test {
@@ -120,6 +200,38 @@ test {
         html.enabled = true
     }
 }
+
+allOpen {
+    annotation("io.micronaut.aop.Around")
+}
+
+// enhance Hibernate enities in bytecode
+hibernate {
+    enhance {
+        enableLazyInitialization = true
+        enableDirtyTracking = true
+        enableAssociationManagement = true
+    }
+}
+
+// filter out release candidates on dependency update check
+dependencyUpdates.resolutionStrategy {
+    componentSelection { rules ->
+        rules.all { ComponentSelection selection ->
+            boolean rejected = ['alpha', 'beta', 'rc', 'cr', 'm', 'preview', 'b', 'ea', 'pr'].any { qualifier ->
+                selection.candidate.version ==~ /(?i).*[.-]$qualifier[.\d-+]*/
+            }
+            if (rejected) {
+                selection.reject('Release candidate')
+            }
+        }
+    }
+}
+
+// -noverify skips verifying JAR files (reduce startup time)
+// -XX:TieredStopAtLevel=1 limits optimizations of the HotSpot compiler and its runtime overhead (reduce startup time)
+// -Dcom.sun.management.jmxremote enables Java Management Extensions
+run.jvmArgs('-noverify', '-XX:TieredStopAtLevel=1', '-Dcom.sun.management.jmxremote')
 
 // For Heroku: create a "stage" task which simply executes "build"
 task stage(dependsOn: ['clean', 'build'])
