--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,14 +4,16 @@ services:
     build: .
     image: monitoring-microservice
     ports:
-     - "80:80"
+      - "80:80"
     environment:
-     - MONGODB_URL=mongo:27017
+      # port 80 is actually already defined as default for docker as ENV in Dockerfile
+      - MICRONAUT_SERVER_PORT=80
+      - MONGODB_URI=http://mongo:27017
   mongo:
     image: mongo:4
     ports:
-     - "27017:27017"
+      - "27017:27017"
     volumes:
-     - mongo-data:/data/db
+      - mongo-data:/data/db
 volumes:
   mongo-data:
