--- a/gradle.properties
+++ b/gradle.properties
@@ -1,25 +1,33 @@
 # Application definition
-group=de.debuglevel.monitoring
+applicationGroup=de.debuglevel
+applicationModule=monitoring
+applicationTitle=Monitoring Microservice
 version=0.0.3-SNAPSHOT
 # other settings
 kotlin.code.style=official
 # dependency versions
-kotlinVersion=1.3.72
-micronautVersion=1.3.5
-micronautDataVersion=1.0.0.M1
-jacksonModuleKotlinVersion=2.9.9
-hibernateGradlePluginVersion=5.4.17.Final
-spekVersion=2.0.6
-assertjVersion=3.16.1
-kotlinLoggingVersion=1.7.9
-logbackVersion=1.2.3
-buildScanVersion=2.4.1
-versionsPluginVersion=0.28.0
+## Gradle
+gradleEnterpriseVersion=3.1.1
+versionsPluginVersion=0.29.0
 releasePluginVersion=2.8.1
-shadowVersion=5.2.0
-mockitoJunitJupiterVersion=2.22.0
+shadowVersion=6.0.0
+hibernateGradlePluginVersion=5.4.20.Final
+## Kotlin
+kotlinVersion=1.4.0
+## Micronaut
+micronautVersion=2.0.1
+## Data
 hsqldbVersion=2.5.0
 derbyVersion=10.15.1.3
+jacksonModuleKotlinVersion=2.11.2
+## Logging
+kotlinLoggingVersion=1.8.3
+logbackVersion=1.2.3
+## Tests
+spekVersion=2.0.6
+assertjVersion=3.16.1
+mockitoJunitJupiterVersion=2.22.0
 # TODO: maybe use those performance tweaks
 #kapt.use.worker.api=true
 #kapt.incremental.apt=true
+#org.gradle.parallel=true # only improves multiproject builds 
