--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,31 +1,58 @@
 app:
   monitoring:
   security:
-    single-user-password-authentication:
-      credentials:
-        username: "SECRET_USERNAME"
-        password: "SECRET_PASSWORD"
+    configurable-credential-authentication:
+      username: "SECRET_USERNAME"
+      password: "SECRET_PASSWORD"
 
 micronaut:
   application:
     name: monitoring
+    instance:
+      id: ${random.shortuuid} # instance ID should be set random if Consul registration is active to avoid collisions (default ID would be the port number)
   server:
     port: 8080 # default: -1 (random port)
     cors:
-    #  enabled: true # default: false
+      enabled: false # default: false
   router:
     static-resources:
-      # YAML file will be available at http://localhost:8080/swagger/greeter-microservice-0.1.0.yml
-      # where "greeter-microservice-0.1.0" is derived from the Title and Version attributes of @OpenAPIDefinition
+      # YAML file will be available at http://localhost:8080/swagger/greeter-microservice-0.1.yml
+      # where "greeter-microservice-0.1" is derived from the Title and Version attributes of @OpenAPIDefinition
+      # TODO: does not seem to work if security is enabled and Auth-Header set?
       swagger:
         paths: classpath:META-INF/swagger
         mapping: /swagger/**
   security:
-    enabled: false # default: false
+    enabled: true # default: false
+#  http:
+#    services: # manual service discovery
+#      foo: # service ID
+#        urls: # environment variable list would be MICRONAUT_HTTP_SERVICES_FOO_URLS=http://prod1,http://prod2
+#          - http://foo1
+#          - http://foo2
+
+logger:
+  levels:
+    de.debuglevel: DEBUG
+    io.micronaut.http.server: DEBUG
+    io.micronaut.data.query: DEBUG
+    # io.micronaut.context.condition: DEBUG # log infos about loading conditional beans
 
 jackson:
+  serialization-inclusion: NON_ABSENT # omit null and Optional.empty() in JSON, but include empty collections and empty strings
   serialization:
     indentOutput: true
+    writeDatesAsTimestamps: false # write DateTimes as ISO 8601 "2020-07-26T21:37:09.39" instead of an array of numbers
+
+# default values of consul section only apply if io.micronaut:micronaut-discovery-client is available
+consul:
+  client:
+    health-check: false # check if Consul is alive; should be true if Consul is used (default: true; other health checks get active as soon as discovery.enabled=true)
+    registration: # register this service on Consul
+      enabled: false # default: true
+    discovery: # search for services on Consul if their id is provided (e.g. Micronaut declarative clients)
+      enabled: false # default: true
+    defaultZone: "${CONSUL_HOST:localhost}:${CONSUL_PORT:8500}" # Consul server to use for service registration and discovery
 
 datasources:
   #  # Apache Derby
@@ -50,7 +77,7 @@ datasources:
     url: jdbc:h2:mem:devDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
     driverClassName: org.h2.Driver
     username: sa
-    password: ''
+    password: ""
     schema-generate: CREATE_DROP
     dialect: H2
 
@@ -65,6 +92,3 @@ jpa:
           provider: none
         hbm2ddl:
           auto: update
-
-
-
