--- a/build.gradle
+++ b/build.gradle
@@ -67,6 +67,7 @@ dependencies {
 
     // Kotlin
     //implementation "org.jetbrains.kotlin:kotlin-reflect"
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.9'
 
     // Tests
     /// JUnit
