--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@
 applicationGroup=de.debuglevel
 applicationModule=monitoring
 applicationTitle=Monitoring Microservice
-version=0.1.1-SNAPSHOT
+version=0.1.1
 # other settings
 kotlin.code.style=official
 # dependency versions
