[Gradle Release Plugin] - new version commit:  '0.1.2-SNAPSHOT'.

--- a/gradle.properties
+++ b/gradle.properties
@@ -2,7 +2,7 @@
 applicationGroup=de.debuglevel
 applicationModule=monitoring
 applicationTitle=Monitoring Microservice
-version=0.1.1
+version=0.1.2-SNAPSHOT
 # other settings
 kotlin.code.style=official
 # dependency versions
