--- a/build.gradle
+++ b/build.gradle
@@ -57,9 +57,13 @@ mainClassName = _mainClass
 repositories {
     jcenter()
 //    mavenLocal()
-//    maven {
-//        url "https://jitpack.io"
-//    }
+    maven {
+        url "https://jitpack.io"
+//        // workaround to be able to specify a git hash as jitpack version
+//        metadataSources {
+//            artifact()
+//        }
+    }
 }
 
 dependencies {
@@ -67,7 +71,7 @@ dependencies {
 
     // Kotlin
     //implementation "org.jetbrains.kotlin:kotlin-reflect"
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.9'
+    //implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$kotlinCoroutinesVersion"
 
     // Tests
     /// JUnit
@@ -82,8 +86,9 @@ dependencies {
 
     // Logging
     // See http://saltnlight5.blogspot.com/2013/08/how-to-configure-slf4j-with-different.html for a quick introduction to slf4j
-    implementation "io.github.microutils:kotlin-logging:$kotlinLoggingVersion"
+    implementation "io.github.microutils:kotlin-logging-jvm:$kotlinLoggingVersion"
     runtimeOnly "ch.qos.logback:logback-classic:$logbackVersion"
+    runtimeOnly "net.logstash.logback:logstash-logback-encoder:$logstashLogbackVersion"
 
 
     // Micronaut Bill of Materials, which defines dependency versions
@@ -122,6 +127,7 @@ dependencies {
     implementation "io.micronaut.data:micronaut-data-hibernate-jpa"
     implementation "io.micronaut.sql:micronaut-jdbc-hikari"
     runtimeOnly "com.h2database:h2"
+    runtimeOnly "org.mariadb.jdbc:mariadb-java-client:$mariadbVersion"
     //testRuntimeOnly "org.hsqldb:hsqldb:$hsqldbVersion"
     //testRuntimeOnly "org.apache.derby:derby:$derbyVersion"
 
