--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,7 +16,7 @@ micronaut:
   server:
     port: 8080 # default: -1 (random port)
     cors:
-      enabled: false # default: false
+      enabled: true # default: false
   router:
     static-resources:
       # YAML file will be available at http://localhost:8080/swagger/greeter-microservice-0.1.yml
@@ -39,10 +39,11 @@ logger:
     de.debuglevel: DEBUG
     io.micronaut.http.server: DEBUG
     io.micronaut.data.query: DEBUG
-    # io.micronaut.context.condition: DEBUG # log infos about loading conditional beans
+    # io.micronaut.context.condition: DEBUG # log information about loading conditional beans
 
 jackson:
   serialization-inclusion: NON_ABSENT # omit null and Optional.empty() in JSON, but include empty collections and empty strings
+  # serialization-inclusion: ALWAYS # include empty collections, empty strings, null and Optional.empty(); see docs of com.fasterxml.jackson.annotation.JsonInclude.Include for other behaviors
   serialization:
     indentOutput: true
     writeDatesAsTimestamps: false # write DateTimes as ISO 8601 "2020-07-26T21:37:09.39" instead of an array of numbers
@@ -58,34 +59,43 @@ consul:
     defaultZone: "${CONSUL_HOST:localhost}:${CONSUL_PORT:8500}" # Consul server to use for service registration and discovery
 
 datasources:
-  #  # Apache Derby
-  #  default:
-  #    url: jdbc:derby:memory:devDb;create=true
-  #    driverClassName: org.apache.derby.jdbc.EmbeddedDriver
-  #    username: sa
-  #    password: ''
-  #    schema-generate: CREATE_DROP
-  #    dialect: Derby
-  #  # HSQL
-  #  default:
-  #    url: jdbc:hsqldb:mem:devDb
-  #    driverClassName: org.hsqldb.jdbc.JDBCDriver
-  #    username: sa
-  #    password: ''
-  #    schema-generate: CREATE_DROP
-  #    dialect: HSQL
   # H2
   default:
-    # replace "mem" by e.g. /data/db to store it in a file
-    url: jdbc:h2:mem:devDb;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
+    # replace "mem:developmentDatabase" by e.g. "file:/data/db" to store it in a file
+    # for H2 in-memory behaviour and options see http://www.h2database.com/html/features.html#in_memory_databases
+    url: jdbc:h2:mem:developmentDatabase;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
     driverClassName: org.h2.Driver
     username: sa
     password: ""
+    # CREATE      Create the schema if it doesn't exist.
+    # CREATE_DROP Drop and recreate the schema.
+    # NONE        Do nothing.
     schema-generate: CREATE_DROP
     dialect: H2
-
-mongodb:
-  uri: localhost:27017
+#  # Apache Derby
+#  default:
+#    url: jdbc:derby:memory:developmentDatabase;create=true
+#    driverClassName: org.apache.derby.jdbc.EmbeddedDriver
+#    username: sa
+#    password: ''
+#    schema-generate: CREATE_DROP
+#    dialect: Derby
+#  # HSQL
+#  default:
+#    url: jdbc:hsqldb:mem:developmentDatabase
+#    driverClassName: org.hsqldb.jdbc.JDBCDriver
+#    username: sa
+#    password: ''
+#    schema-generate: CREATE_DROP
+#    dialect: HSQL
+#  # MariaDB
+#  default:
+#    url: jdbc:mariadb://localhost:3306/db
+#    driverClassName: org.mariadb.jdbc.Driver
+#    username: user
+#    password: password
+#    schema-generate: CREATE_DROP
+#    dialect: MariaDB103
 
 jpa:
   default:
@@ -94,4 +104,5 @@ jpa:
         bytecode:
           provider: none
         hbm2ddl:
+          # See https://docs.jboss.org/hibernate/orm/5.4/javadocs/org/hibernate/tool/schema/Action.html
           auto: update
