--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -64,7 +64,7 @@ datasources:
     # replace "mem:developmentDatabase" by e.g. "file:/data/db" to store it in a file
     # for H2 in-memory behaviour and options see http://www.h2database.com/html/features.html#in_memory_databases
     url: jdbc:h2:mem:developmentDatabase;MVCC=TRUE;LOCK_TIMEOUT=10000;DB_CLOSE_ON_EXIT=FALSE
-    driverClassName: org.h2.Driver
+    driver-class-name: org.h2.Driver
     username: sa
     password: ""
     # CREATE      Create the schema if it doesn't exist.
@@ -75,7 +75,7 @@ datasources:
 #  # Apache Derby
 #  default:
 #    url: jdbc:derby:memory:developmentDatabase;create=true
-#    driverClassName: org.apache.derby.jdbc.EmbeddedDriver
+#    driver-class-name: org.apache.derby.jdbc.EmbeddedDriver
 #    username: sa
 #    password: ''
 #    schema-generate: CREATE_DROP
@@ -83,7 +83,7 @@ datasources:
 #  # HSQL
 #  default:
 #    url: jdbc:hsqldb:mem:developmentDatabase
-#    driverClassName: org.hsqldb.jdbc.JDBCDriver
+#    driver-class-name: org.hsqldb.jdbc.JDBCDriver
 #    username: sa
 #    password: ''
 #    schema-generate: CREATE_DROP
@@ -91,7 +91,7 @@ datasources:
 #  # MariaDB
 #  default:
 #    url: jdbc:mariadb://localhost:3306/db
-#    driverClassName: org.mariadb.jdbc.Driver
+#    driver-class-name: org.mariadb.jdbc.Driver
 #    username: user
 #    password: password
 #    schema-generate: CREATE_DROP
@@ -105,4 +105,10 @@ jpa:
           provider: none
         hbm2ddl:
           # See https://docs.jboss.org/hibernate/orm/5.4/javadocs/org/hibernate/tool/schema/Action.html
+          # From https://www.baeldung.com/spring-boot-data-sql-and-schema-sql#controlling-database-creation-using-hibernate
+          # create      Hibernate first drops existing tables, then creates new tables
+          # update      the object model created based on the mappings (annotations or XML) is compared with the existing schema, and then Hibernate updates the schema according to the diff. It never deletes the existing tables or columns even if they are no more required by the application
+          # create-drop similar to create, with the addition that Hibernate will drop the database after all operations are completed. Typically used for unit testing
+          # validate    Hibernate only validates whether the tables and columns exist, otherwise it throws an exception
+          # none        this value effectively turns off the DDL generation
           auto: update
